--- a/style.css
+++ b/style.css
@@ -1,71 +1,203 @@
+/* background color*/
 body {
-    background: rgb(242,215,217);
-background: linear-gradient(90deg, rgba(242,215,217,1) 0%, rgba(211,206,223,1) 41%, rgba(156,180,204,0.9080882352941176) 100%);
-}
-h1 {
-    color:black;
-    text-align: center;
+    background: rgb(19,0,90);
+    background: linear-gradient(90deg, rgba(19,0,90,1) 0%, rgba(0,51,124,1) 46%, rgba(28,130,173,1) 81%, rgba(3,201,136,1) 100%);
 }
 
-h2 {
-    color:brown;
-    font-family:Verdana, Geneva, Tahoma, sans-serif ;
-}
-
-h3 {
-    font-family:'Times New Roman', Times, serif;
-    font-size: 21px ;
-}
-
-
-
-.Personal_Information {
-    width: 200px;
-    border: 15px solid rgb(116, 141, 166);
-    padding: 50px;
-    margin: 20px;
-    float: left;
-}
-
-
-.A_question{
-    width: 200px;
-    border: 15px solid rgb(116, 141, 166);
-    padding: 50px;
-    margin: 20px;
-    float: right;
-    position: relative;
-    left: -50%;
+/* About me*/
+.Web_heading {
     
-
-}
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 10%;
-  }
-.blog_info{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font: size 50vw;
+    color:white;
     text-align: left;
-    width: 200px;
-    border: 15px solid rgb(116, 141, 166);
-    padding: 50px;
-    margin: 20px;
-    float:right;
-
-
-  
+    text-shadow: 2px 15px black;
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 1000px;
+    height: 100px;
 }
-  .blossom_picture{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+
+
+
+
+.style
+    img {
+        align-items: center;
+    border: 1px solid #748DA6;
+    border-width: 5px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 150px;
   }
 
-  .blossom{
-    display: contents;
-    float:left;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/*My portfolio*/
+.My_portfolio{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+    color:white;
+    position: absolute;
+    top: 220%;
+    left: 20%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 1000px;
+    height: 100px;
+}
+
+/*My skill*/
+.My_skill{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+    color:white;
+    position: absolute;
+    top: 320%;
+    left: 20%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 1000px;
+    height: 100px;
+}
+
+/*The skill spin*/
+*
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.conteudo-geral {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conteudo-geral-sliderGeral {
+  --larguraDoItem: 150px;
+  --alturaDoItem: 100px;
+  width: var(--larguraDoItem);
+  height: var(--alturaDoItem);
+  perspective: 1000px;
+}
+
+.sliderGeral {
+  --rotatey: 0;
+  font-size: 4rem;
+  position: relative;
+  transform: rotatey(var(--rotatey));
+  transform-style: preserve-3d;
+  user-select: none;
+  cursor: grab;
+}
+
+.sliderGeral-card {
+  opacity: 0.97;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  transition: opacity 0.5s;
+}
+
+.sliderGeral-card:hover {
+  opacity: 1;
+}
+.sliderGeral-card h1 {
+  color: #fff;
+  font-size: 1.8rem;
+}
+
+.sliderGeral,
+.sliderGeral-card {
+  width: 100%;
+  height: 100%;
+}
+
+.sliderGeral-card:nth-child(1) {
+  --rotatey: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #0093e9, #80d0c7);
+}
+
+.sliderGeral-card:nth-child(2) {
+  --rotatey: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #00dbde, #fc00ff);
+}
+
+.sliderGeral-card:nth-child(3) {
+  --rotatey: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #50d990, #d4d054);
+}
+.sliderGeral-card:nth-child(4) {
+  --rotatey: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #cf91ff, #5782f5);
+}
+
+.sliderGeral-card:nth-child(5) {
+  --rotate: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #642b73, #c6426e);
+}
+
+.sliderGeral-card:nth-child(6) {
+  --rotatey: 0;
+  transform: rotatey(var(--rotatey)) translatez(var(--tz));
+  background: linear-gradient(-229deg, #d9afd9, #97d9e1);
+}
+
+@media screen and (min-width: 576px) {
+  .conteudo-geral-sliderGeral {
+    --larguraDoItem: 250px;
+    --alturaDoItem: 200px;
+    position: absolute;
+    top: 340%;
+    left: 50%;
     
   }
+}
+
+.My_skill_continue{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+
+    color:white;
+    position: absolute;
+    top: 400%;
+    left: 20%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 1000px;
+    height: 100px;
+}
+
+.Contact_me{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+
+    color:white;
+    position: absolute;
+    top: 420%;
+    left: 20%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 1000px;
+    height: 100px;
+}
